# ohjelmistotuotantokurssi

./: .editorconfig  .gitignore  LICENSE  README.md
viikko1/nhl-statistics-1/: pyproject.toml
viikko1/nhl-statistics-1/src/: player_reader.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/: crashcourse.txt  haara1.txt  haara2.txt  lisahaara.txt  rakettiryhma.txt  taasmennaan.txt
viikko2/nhl-reader/: pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/web-login/: pyproject.toml
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: home.robot  login.robot  login_resource.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/src/: ostoskori.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko6/: PULL.md
viikko6/query-language/src/: index.py  matchers.py
viikko7/: referaatti.md
viikko7/kivi-paperi-sakset/src/: index.py  kps.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  pelintekija.py
